# stm32f7-cnc-ui

./: Cargo.toml  Embed.toml  LICENSE  README.md  build.rs  openocd.gdb
src/: consts.rs  design_thinking.md  display.rs  ft5336.rs  ft6206.rs  main.rs  screen.rs  state.rs  ui.rs  view.rs
