[package]
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F7xx family of microcontrollers"
documentation = "https://docs.rs/stm32f7xx-hal"
edition = "2018"
keywords = ["arm", "cortex-m", "stm32f7xx", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32f7-cnc-ui"
version = "0.6.0"

[features]
rt = []

[dependencies]
cortex-m = "0.7"
cortex-m-rt = ">=0.6.15, <0.8"
embedded-graphics = "0.7.1"
embedded-time = "0.12.0"
ft5336="0.1.0"
panic-semihosting = "0.5.2"
profont = "0.5.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
stm32f7xx-hal = {version = "0.6.0", features = ["stm32f746"]}

[dev-dependencies.stm32f7xx-hal]
version = "0.6.0"
features = ["stm32f746"]